@@ -89,6 +89,8 @@ xx/xx/2005 - 1.12.2-WIP
 	- Automatically update access and change time in ntfs_attr_p{read,write}
 	  and ntfs_attr_truncate.  (Yura)
 	- Add support of MS_NOATIME flag to ntfs_mount().  (Yura)
+	- ntfsclone: --metadata also wipes out the timestamps in the $I30 and
+	  in the /$Extend/$Quota:$Q index root attributes.  (Szaka)
 
 10/10/2005 - 1.12.1 - Minor fix to location of mount.ntfs-fuse and mkfs.ntfs.
 
